GH-155: Migrate to AWS SDK v2
Fixes https://github.com/spring-projects/spring-integration-aws/issues/155

* Upgrade to the latest deps including Gradle
* Remove XML configuration support
* Make use of SC-AWS 3.0 SQS and SNS support in respective channel adapters